@@ -1,54 +1,25 @@
 package com.example.demo.service.impl;
-
-import com.example.demo.entity.Asset;
 import com.example.demo.entity.AssetLifecycleEvent;
 import com.example.demo.exception.ResourceNotFoundException;
-import com.example.demo.repository.AssetLifecycleEventRepository;
-import com.example.demo.repository.AssetRepository;
+import com.example.demo.repository.*;
 import com.example.demo.service.AssetLifecycleEventService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import jakarta.transaction.Transactional;
-
 import java.time.LocalDate;
 import java.util.List;
 
 @Service
-@Transactional
 public class AssetLifecycleEventServiceImpl implements AssetLifecycleEventService {
-
-    private final AssetLifecycleEventRepository eventRepository;
-    private final AssetRepository assetRepository;
-
-    @Autowired
-    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepository,
-            AssetRepository assetRepository) {
-        this.eventRepository = eventRepository;
-        this.assetRepository = assetRepository;
+    private final AssetLifecycleEventRepository eventRepo;
+    private final AssetRepository assetRepo;
+    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepo, AssetRepository assetRepo) {
+        this.eventRepo = eventRepo; this.assetRepo = assetRepo;
     }
-
-    @Override
-    public AssetLifecycleEvent logEvent(Long assetId, AssetLifecycleEvent event) {
-        Asset asset = assetRepository.findById(assetId)
-                .orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
-
-        if (event.getEventType() == null || event.getEventDescription() == null
-                || event.getEventDescription().trim().isEmpty()) {
-            throw new IllegalArgumentException("Invalid event details");
-        }
-        if (event.getEventDate().isAfter(LocalDate.now())) {
-            throw new IllegalArgumentException("Event date cannot be in the future");
-        }
-
+    @Override public AssetLifecycleEvent logEvent(Long assetId, AssetLifecycleEvent event) {
+        var asset = assetRepo.findById(assetId).orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
+        if (event.getEventDescription() == null || event.getEventDescription().isBlank()) throw new IllegalArgumentException("Desc required");
+        if (event.getEventDate().isAfter(LocalDate.now())) throw new IllegalArgumentException("Future date invalid");
         event.setAsset(asset);
-        return eventRepository.save(event);
+        return eventRepo.save(event);
     }
-
-    @Override
-    public List<AssetLifecycleEvent> getEventsForAsset(Long assetId) {
-        if (!assetRepository.existsById(assetId)) {
-            throw new ResourceNotFoundException("Asset not found");
-        }
-        return eventRepository.findByAssetIdOrderByEventDateDesc(assetId);
-    }
+    @Override public List<AssetLifecycleEvent> getEvents(Long assetId) { return eventRepo.findByAssetIdOrderByEventDateDesc(assetId); }
 }
